--- a/src/images/preseed.cfg
+++ b/src/images/preseed.cfg
@@ -141,7 +141,7 @@ d-i pkgsel/install-language-support                 boolean true
 d-i pkgsel/update-policy                            select unattended-upgrades
 d-i pkgsel/upgrade                                  select full-upgrade
 d-i pkgsel/updatedb                                 boolean true
-d-i pkgsel/include                                  string bash-completion openssh-server cloud-init cloud-initramfs-growroot melodic-server melodic-management nornet-server nornet-management
+d-i pkgsel/include                                  string bash-completion openssh-server cloud-init melodic-server melodic-management nornet-server nornet-management
 # d-i base-installer/kernel/override-image          string <SET_NEW_KERNEL_HERE>
 
 # ====== Post-Install =======================================================
