--- a/src/images/preseed.cfg
+++ b/src/images/preseed.cfg
@@ -128,6 +128,8 @@ d-i apt-setup/multiverse                            boolean true
 d-i apt-setup/multiverse/source                     boolean true
 
 # Thomas Dreibholz's PPA:
+# !!! These lines have no effect -> https://ubuntuforums.org/showthread.php?t=2387570 !!!
+# Need to add PPA by late_command ...
 d-i apt-setup/restricted                            boolean false
 d-i apt-setup/local0/repository                     string http://ppa.launchpad.net/dreibh/ppa/ubuntu xenial main
 d-i apt-setup/local0/comment                        string Thomas Dreibholz's PPA
@@ -141,7 +143,7 @@ d-i pkgsel/install-language-support                 boolean true
 d-i pkgsel/update-policy                            select unattended-upgrades
 d-i pkgsel/upgrade                                  select full-upgrade
 d-i pkgsel/updatedb                                 boolean true
-d-i pkgsel/include                                  string bash-completion openssh-server cloud-init melodic-server melodic-management nornet-server nornet-management
+d-i pkgsel/include                                  string bash-completion openssh-server cloud-init
 # d-i base-installer/kernel/override-image          string <SET_NEW_KERNEL_HERE>
 
 # ====== Post-Install =======================================================
@@ -156,6 +158,9 @@ d-i pkgsel/include                                  string bash-completion opens
 # * Clean up
 d-i preseed/late_command                            string \
  echo "====== NorNet/MELODIC Post-Install ======" ; \
+ in-target /usr/bin/apt-get-add-repository -s -y ppa:dreibh/ppa \
+ in-target /usr/bin/apt-get update ; \
+ in-target /usr/bin/apt-get install -y melodic-server melodic-management nornet-server nornet-management ; \
  in-target /bin/bash -c -- '/bin/echo "# Network configuration written by preseed late_command" >/etc/network/interfaces' ; \
  in-target /bin/bash -c -- '/bin/echo "source /etc/network/interfaces.d/*" >>/etc/network/interfaces' ; \
  in-target /bin/bash -c -- '/bin/echo "" >>/etc/network/interfaces' ; \
@@ -180,7 +185,6 @@ d-i preseed/late_command                            string \
  in-target /usr/sbin/update-locale LC_TIME=en_GB.UTF-8 LC_MESSAGES=POSIX ; \
  in-target /usr/bin/apt-get install --reinstall nornet-server ; \
  in-target /usr/bin/apt-file update ; \
- in-target /usr/bin/apt-get update ; \
  in-target /usr/bin/apt-get dist-upgrade -y ; \
  in-target /usr/bin/apt-get clean ; \
  in-target /usr/bin/Create-New-SSH-Node-Keys -yes-to-all-i-am-really-sure ; \
