Switch to CMake.

--- a/debian.conf
+++ b/debian.conf
@@ -2,7 +2,7 @@
 
 # ---------------------------------------------------------------------------
 CONFOPT=""
-MAKE_DIST="./make-dist"
+MAKE_DIST="cmake -DCMAKE_INSTALL_PREFIX=/usr . && make dist"
 MAINTAINER="Thomas Dreibholz <dreibh@simula.no>"
 DEBIAN_LAST_ENTRY=""
 UBUNTU_LAST_ENTRY=""
