--- a/debian/control
+++ b/debian/control
@@ -7,6 +7,7 @@ Build-Depends: cmake,
                debhelper (>= 9),
                exiftool,
                gimp,
+               graphicsmagick,
                gsfonts,
                imagemagick,
                libfile-fcntllock-perl
@@ -32,6 +33,7 @@ Architecture: any
 Depends: cmake,
          exiftool,
          gimp,
+         graphicsmagick,
          gsfonts,
          imagemagick,
          nornet-development,
