--- a/.travis.yml
+++ b/.travis.yml
@@ -127,9 +127,9 @@ install:
     if [ "$TRAVIS_OS_NAME" = "linux" ] ; then
        if [ "$VARIANT" = "ubuntu" ] ; then
           sudo docker exec -t ubuntu-test bash -c "apt-get update"
-          sudo docker exec -t ubuntu-test bash -c "apt-get install -y cmake gcc g++ clang make libsctp-dev"
+          sudo docker exec -t ubuntu-test bash -c "apt-get install -y cmake gcc g++ clang make exiftool gimp imagemagick graphicsmagick gsfonts inkscape"
        elif [ "$VARIANT" = "fedora" ] ; then
-          sudo docker exec -t ubuntu-test bash -c "dnf install -y cmake gcc gcc-c++ clang make lksctp-tools-devel"
+          sudo docker exec -t ubuntu-test bash -c "dnf install -y cmake gcc gcc-c++ clang make perl-Image-ExifTool gimp ImageMagick GraphicsMagick inkscape"
        fi
     fi
 
