--- a/debian/control
+++ b/debian/control
@@ -8,8 +8,10 @@ Build-Depends: cmake,
                fonts-dejavu,
                fonts-noto,
                fonts-noto-cjk,
+               ghostscript,
                gimp,
                graphicsmagick,
+               gsfonts,
                libfile-fcntllock-perl,
                libimage-exiftool-perl
 Standards-Version: 4.1.4
@@ -35,6 +37,7 @@ Depends: cmake,
          fonts-dejavu,
          fonts-noto,
          fonts-noto-cjk,
+         ghostscript,
          gimp,
          graphicsmagick,
          gsfonts,
