--- a/.travis.yml
+++ b/.travis.yml
@@ -128,9 +128,9 @@ install:
        if [ "$VARIANT" = "ubuntu" ] ; then
           sudo docker exec -t ubuntu-test bash -c "apt-get update"
           sudo docker exec -t ubuntu-test bash -c "apt-get dist-upgrade -y"
-          sudo docker exec -t ubuntu-test bash -c "apt-get install -y cmake gcc g++ clang make libimage-exiftool-perl gimp graphicsmagick"
+          sudo docker exec -t ubuntu-test bash -c "apt-get install -y cmake gcc g++ clang make libimage-exiftool-perl gimp graphicsmagick ghostscript gsfonts"
        elif [ "$VARIANT" = "fedora" ] ; then
-          sudo docker exec -t ubuntu-test bash -c "dnf install -y cmake gcc gcc-c++ clang make perl-Image-ExifTool gimp GraphicsMagick"
+          sudo docker exec -t ubuntu-test bash -c "dnf install -y cmake gcc gcc-c++ clang make perl-Image-ExifTool gimp GraphicsMagick ghostscript urw-base35-fonts"
        fi
     fi
 
