Fix in CMakeLists.txt for grub configuration installation.

--- a/grub/CMakeLists.txt
+++ b/grub/CMakeLists.txt
@@ -4,5 +4,6 @@
 
 FILE(GLOB themeFiles  "[0-9][0-9]_*_theme")
 
-INSTALL(FILES ${themeFiles} DESTINATION /etc/grub.d)
-INSTALL(FILES grub-defaults DESTINATION ${CMAKE_INSTALL_DATADIR}/melodic-nornet)
+# NOTE: themes are scripts!
+INSTALL(PROGRAMS ${themeFiles} DESTINATION ${CMAKE_INSTALL_SYSCONFDIR}/grub.d)
+INSTALL(FILES    grub-defaults DESTINATION ${CMAKE_INSTALL_DATADIR}/melodic-nornet)
