--- a/.travis.yml
+++ b/.travis.yml
@@ -5,45 +5,45 @@ matrix:
 
     # ###### Ubuntu Linux ###################################################
 
-    # ====== Ubuntu (latest version) ========================================
+    # ====== Ubuntu 18.10 (Cosmic Cuttlefish) ===============================
     - os: linux
       dist: xenial
       group: travis_latest
-      env: DOCKER="ubuntu:latest" VARIANT="ubuntu" COMPILER_C="gcc" COMPILER_CXX="g++"
+      env: DOCKER="ubuntu:cosmic" VARIANT="ubuntu" TOOL="compile" COMPILER_C="gcc" COMPILER_CXX="g++"
     - os: linux
       dist: xenial
       group: travis_latest
-      env: DOCKER="ubuntu:latest" VARIANT="ubuntu" COMPILER_C="clang" COMPILER_CXX="clang++"
+      env: DOCKER="ubuntu:cosmic" VARIANT="ubuntu" TOOL="pbuilder"
 
     # ====== Ubuntu 18.04 (Bionic Beaver) ===================================
     - os: linux
       dist: xenial
       group: travis_latest
-      env: DOCKER="ubuntu:bionic" VARIANT="ubuntu" COMPILER_C="gcc" COMPILER_CXX="g++"
+      env: DOCKER="ubuntu:bionic" VARIANT="ubuntu" TOOL="compile" COMPILER_C="gcc" COMPILER_CXX="g++"
     - os: linux
       dist: xenial
       group: travis_latest
-      env: DOCKER="ubuntu:bionic" VARIANT="ubuntu" COMPILER_C="clang" COMPILER_CXX="clang++"
+      env: DOCKER="ubuntu:bionic" VARIANT="ubuntu" TOOL="pbuilder"
 
     # ====== Ubuntu 16.04 (Xenial Xerus) ====================================
     - os: linux
       dist: xenial
       group: travis_latest
-      env: DOCKER="ubuntu:xenial" VARIANT="ubuntu" COMPILER_C="gcc" COMPILER_CXX="g++"
+      env: DOCKER="ubuntu:xenial" VARIANT="ubuntu" TOOL="compile" COMPILER_C="gcc" COMPILER_CXX="g++"
     - os: linux
       dist: xenial
       group: travis_latest
-      env: DOCKER="ubuntu:xenial" VARIANT="ubuntu" COMPILER_C="clang" COMPILER_CXX="clang++"
+      env: DOCKER="ubuntu:xenial" VARIANT="ubuntu" TOOL="pbuilder"
 
     # ====== Ubuntu 14.04 (Trusty Tahr) ====================================
-    #- os: linux
-    #  dist: xenial
-    #  group: travis_latest
-    #  env: DOCKER="ubuntu:trusty" VARIANT="ubuntu" COMPILER_C="gcc" COMPILER_CXX="g++"
-    #- os: linux
-    #  dist: xenial
-    #  group: travis_latest
-    #  env: DOCKER="ubuntu:trusty" VARIANT="ubuntu" COMPILER_C="clang" COMPILER_CXX="clang++"
+    - os: linux
+      dist: xenial
+      group: travis_latest
+      env: DOCKER="ubuntu:trusty" VARIANT="ubuntu" TOOL="compile" COMPILER_C="gcc" COMPILER_CXX="g++"
+    - os: linux
+      dist: xenial
+      group: travis_latest
+      env: DOCKER="ubuntu:trusty" VARIANT="ubuntu" TOOL="pbuilder"
 
 
      # ###### Debian Linux ##################################################
@@ -52,57 +52,91 @@ matrix:
     - os: linux
       dist: xenial
       group: travis_latest
-      env: DOCKER="debian:testing" VARIANT="ubuntu" COMPILER_C="gcc" COMPILER_CXX="g++"
+      env: DOCKER="debian:testing" VARIANT="debian" TOOL="compile" COMPILER_C="gcc" COMPILER_CXX="g++"
     - os: linux
       dist: xenial
       group: travis_latest
-      env: DOCKER="debian:testing" VARIANT="ubuntu" COMPILER_C="clang" COMPILER_CXX="clang++"
-
-    # ====== Debian Stretch =================================================
-    - os: linux
-      dist: xenial
-      group: travis_latest
-      env: DOCKER="debian:stretch" VARIANT="ubuntu" COMPILER_C="gcc" COMPILER_CXX="g++"
-    - os: linux
-      dist: xenial
-      group: travis_latest
-      env: DOCKER="debian:stretch" VARIANT="ubuntu" COMPILER_C="clang" COMPILER_CXX="clang++"
+      env: DOCKER="debian:testing" VARIANT="debian" TOOL="pbuilder"
 
     # ====== Debian Sid =====================================================
     - os: linux
       dist: xenial
       group: travis_latest
-      env: DOCKER="debian:sid" VARIANT="ubuntu" COMPILER_C="gcc" COMPILER_CXX="g++"
+      env: DOCKER="debian:sid" VARIANT="debian" TOOL="compile" COMPILER_C="gcc" COMPILER_CXX="g++"
     - os: linux
       dist: xenial
       group: travis_latest
-      env: DOCKER="debian:sid" VARIANT="ubuntu" COMPILER_C="clang" COMPILER_CXX="clang++"
-
-
-    # ###### Fedora Linux ###################################################
-
-    # ====== Fedora 29 ======================================================
+      env: DOCKER="debian:sid" VARIANT="debian" TOOL="compile" COMPILER_C="clang" COMPILER_CXX="clang++"
     - os: linux
       dist: xenial
       group: travis_latest
-      env: DOCKER="fedora:29" VARIANT="fedora" COMPILER_C="gcc" COMPILER_CXX="g++"
+      env: DOCKER="debian:sid" VARIANT="debian" TOOL="pbuilder"
+
+    # ====== Debian Buster ==================================================
     - os: linux
       dist: xenial
       group: travis_latest
-      env: DOCKER="fedora:29" VARIANT="fedora" COMPILER_C="clang" COMPILER_CXX="clang++"
-
-    # ====== Fedora Rawhide =================================================
+      env: DOCKER="debian:buster" VARIANT="debian" TOOL="compile" COMPILER_C="gcc" COMPILER_CXX="g++"
     - os: linux
       dist: xenial
       group: travis_latest
-      env: DOCKER="fedora:rawhide" VARIANT="fedora" COMPILER_C="gcc" COMPILER_CXX="g++"
+      env: DOCKER="debian:buster" VARIANT="debian" TOOL="pbuilder"
+
+    # ====== Debian Stretch =================================================
     - os: linux
       dist: xenial
       group: travis_latest
-      env: DOCKER="fedora:rawhide" VARIANT="fedora" COMPILER_C="clang" COMPILER_CXX="clang++"
+      env: DOCKER="debian:stretch" VARIANT="debian" TOOL="compile" COMPILER_C="gcc" COMPILER_CXX="g++"
+    - os: linux
+      dist: xenial
+      group: travis_latest
+      env: DOCKER="debian:stretch" VARIANT="debian" TOOL="pbuilder"
 
 
-    # ###### Fedora Linux ###################################################
+    ## ###### Fedora Linux ###################################################
+
+    ## ====== Fedora 30 ======================================================
+    #- os: linux
+      #dist: xenial
+      #group: travis_latest
+      #env: DOCKER="fedora:30" VARIANT="fedora" TOOL="compile" COMPILER_C="gcc" COMPILER_CXX="g++"
+    #- os: linux
+      #dist: xenial
+      #group: travis_latest
+      #env: DOCKER="fedora:30" VARIANT="fedora" TOOL="mock"
+
+    ## ====== Fedora 29 ======================================================
+    #- os: linux
+      #dist: xenial
+      #group: travis_latest
+      #env: DOCKER="fedora:29" VARIANT="fedora" TOOL="compile" COMPILER_C="gcc" COMPILER_CXX="g++"
+    #- os: linux
+      #dist: xenial
+      #group: travis_latest
+      #env: DOCKER="fedora:29" VARIANT="fedora" TOOL="mock"
+
+    ## ====== Fedora 28 ======================================================
+    #- os: linux
+      #dist: xenial
+      #group: travis_latest
+      #env: DOCKER="fedora:28" VARIANT="fedora" TOOL="compile" COMPILER_C="gcc" COMPILER_CXX="g++"
+    #- os: linux
+      #dist: xenial
+      #group: travis_latest
+      #env: DOCKER="fedora:28" VARIANT="fedora" TOOL="mock"
+
+    ## ====== Fedora Rawhide =================================================
+    #- os: linux
+      #dist: xenial
+      #group: travis_latest
+      #env: DOCKER="fedora:rawhide" VARIANT="fedora" TOOL="compile" COMPILER_C="gcc" COMPILER_CXX="g++"
+    #- os: linux
+      #dist: xenial
+      #group: travis_latest
+      #env: DOCKER="fedora:rawhide" VARIANT="fedora" TOOL="mock"
+
+
+    # ###### Other ##########################################################
 
     # ====== MacOS X ========================================================
     #- os: osx
@@ -113,37 +147,14 @@ matrix:
 
 before_install:
   - |
-    if [ "$TRAVIS_OS_NAME" = "linux" ] ; then
-       sudo docker run -d --name ubuntu-test -v $(pwd):/travis -w /travis $DOCKER tail -f /dev/null
-       sudo docker ps
-    elif [ "$TRAVIS_OS_NAME" = "osx" ] ; then
-       brew update
-       brew install ...
-    fi
+    ci/before-install
 
 
 install:
   - |
-    if [ "$TRAVIS_OS_NAME" = "linux" ] ; then
-       if [ "$VARIANT" = "ubuntu" ] ; then
-          sudo docker exec -t ubuntu-test bash -c "apt-get update"
-          sudo docker exec -t ubuntu-test bash -c "apt-get dist-upgrade -y"
-          sudo docker exec -t ubuntu-test bash -c "apt-get install -y cmake gcc g++ clang make libimage-exiftool-perl gimp graphicsmagick ghostscript gsfonts"
-       elif [ "$VARIANT" = "fedora" ] ; then
-          sudo docker exec -t ubuntu-test bash -c "dnf install -y cmake gcc gcc-c++ clang make perl-Image-ExifTool gimp GraphicsMagick ghostscript urw-base35-fonts"
-       fi
-    fi
+    ci/install
 
 
 script:
   - |
-    if [ "$TRAVIS_OS_NAME" = "linux" ] ; then
-       sudo docker exec -t ubuntu-test bash -c "cmake ."
-       sudo docker exec -t ubuntu-test bash -c "echo OPTIONS: CC=$COMPILER_C CXX=$COMPILER_CXX"
-       sudo docker exec -t ubuntu-test bash -c "env CC=$COMPILER_C CXX=$COMPILER_CXX ./configure"
-       sudo docker exec -t ubuntu-test bash -c "make VERBOSE=1"
-    elif [ "$TRAVIS_OS_NAME" = "osx" ] ; then
-       ./bootstrap
-       ./configure
-       make VERBOSE=1
-    fi
+    ci/build
