Updated Travis CI configuration.

--- a/.travis.yml
+++ b/.travis.yml
@@ -95,45 +95,45 @@ matrix:
 
     ## ###### Fedora Linux ###################################################
 
-    ## ====== Fedora 30 ======================================================
-    #- os: linux
-      #dist: xenial
-      #group: travis_latest
-      #env: DOCKER="fedora:30" VARIANT="fedora" TOOL="compile" COMPILER_C="gcc" COMPILER_CXX="g++"
-    #- os: linux
-      #dist: xenial
-      #group: travis_latest
-      #env: DOCKER="fedora:30" VARIANT="fedora" TOOL="mock"
+    # ====== Fedora 30 ======================================================
+    - os: linux
+      dist: xenial
+      group: travis_latest
+      env: DOCKER="fedora:30" VARIANT="fedora" TOOL="compile" COMPILER_C="gcc" COMPILER_CXX="g++"
+    - os: linux
+      dist: xenial
+      group: travis_latest
+      env: DOCKER="fedora:30" VARIANT="fedora" TOOL="mock"
 
-    ## ====== Fedora 29 ======================================================
-    #- os: linux
-      #dist: xenial
-      #group: travis_latest
-      #env: DOCKER="fedora:29" VARIANT="fedora" TOOL="compile" COMPILER_C="gcc" COMPILER_CXX="g++"
-    #- os: linux
-      #dist: xenial
-      #group: travis_latest
-      #env: DOCKER="fedora:29" VARIANT="fedora" TOOL="mock"
+    # ====== Fedora 29 ======================================================
+    - os: linux
+      dist: xenial
+      group: travis_latest
+      env: DOCKER="fedora:29" VARIANT="fedora" TOOL="compile" COMPILER_C="gcc" COMPILER_CXX="g++"
+    - os: linux
+      dist: xenial
+      group: travis_latest
+      env: DOCKER="fedora:29" VARIANT="fedora" TOOL="mock"
 
-    ## ====== Fedora 28 ======================================================
-    #- os: linux
-      #dist: xenial
-      #group: travis_latest
-      #env: DOCKER="fedora:28" VARIANT="fedora" TOOL="compile" COMPILER_C="gcc" COMPILER_CXX="g++"
-    #- os: linux
-      #dist: xenial
-      #group: travis_latest
-      #env: DOCKER="fedora:28" VARIANT="fedora" TOOL="mock"
+    # ====== Fedora 28 ======================================================
+    - os: linux
+      dist: xenial
+      group: travis_latest
+      env: DOCKER="fedora:28" VARIANT="fedora" TOOL="compile" COMPILER_C="gcc" COMPILER_CXX="g++"
+    - os: linux
+      dist: xenial
+      group: travis_latest
+      env: DOCKER="fedora:28" VARIANT="fedora" TOOL="mock"
 
-    ## ====== Fedora Rawhide =================================================
-    #- os: linux
-      #dist: xenial
-      #group: travis_latest
-      #env: DOCKER="fedora:rawhide" VARIANT="fedora" TOOL="compile" COMPILER_C="gcc" COMPILER_CXX="g++"
-    #- os: linux
-      #dist: xenial
-      #group: travis_latest
-      #env: DOCKER="fedora:rawhide" VARIANT="fedora" TOOL="mock"
+    # ====== Fedora Rawhide =================================================
+    - os: linux
+      dist: xenial
+      group: travis_latest
+      env: DOCKER="fedora:rawhide" VARIANT="fedora" TOOL="compile" COMPILER_C="gcc" COMPILER_CXX="g++"
+    - os: linux
+      dist: xenial
+      group: travis_latest
+      env: DOCKER="fedora:rawhide" VARIANT="fedora" TOOL="mock"
 
 
     # ###### Other ##########################################################
