--- a/.travis.yml
+++ b/.travis.yml
@@ -147,14 +147,14 @@ matrix:
 
 before_install:
   - |
-    ci/before-install
+    travis_wait 60 ci/before-install
 
 
 install:
   - |
-    ci/install
+    travis_wait 60 ci/install
 
 
 script:
   - |
-    ci/build
+    travis_wait 60 ci/build
