--- a/.travis.yml
+++ b/.travis.yml
@@ -158,4 +158,6 @@ install:
 script:
   - |
     travis_wait 60 ci/build
-    travis_wait 60 ci/test
+    if [ "${VARIANT}" != "debian" ] ; then   # There is no Debian PPA for the required nornet-* packages!
+       travis_wait 60 ci/test
+    fi
