Some clean-ups.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,4 +9,6 @@ INSTALL(FILES MELODIC-System-Info DESTINATION ${CMAKE_INSTALL_BINDIR})
 # SOURCE DIRECTORIES
 #############################################################################
 
+ADD_SUBDIRECTORY(background)
 ADD_SUBDIRECTORY(cloud-init)
+ADD_SUBDIRECTORY(grub)
