Updated Travis CI configuration.

--- a/.travis.yml
+++ b/.travis.yml
@@ -147,7 +147,8 @@ install:
 
 script:
   - |
-    travis_wait 60 ci/build
     if [ "${VARIANT}" != "debian" ] ; then   # There is no Debian PPA for the required nornet-* packages!
-       travis_wait 60 ci/test
+       travis_wait 60 ci/build && travis_wait 60 ci/test
+    else
+       travis_wait 60 ci/build
     fi
