--- a/.travis.yml
+++ b/.travis.yml
@@ -149,7 +149,7 @@ install:
 script:
   - |
     if [ "${VARIANT}" != "debian" ] ; then   # There is no Debian PPA for the required nornet-* packages!
-       travis_wait 60 ci/build && travis_wait 60 ci/test
+       ci/build && travis_wait 60 ci/test
     else
-       travis_wait 60 ci/build
+       ci/build
     fi
