Updated Travis CI configuration.

--- a/.travis.yml
+++ b/.travis.yml
@@ -253,8 +253,7 @@ install:
 
 script:
   - |
+    travis_wait 60 ci/build
     if [ "${VARIANT}" != "debian" ] ; then   # There is no Debian PPA for the required nornet-* packages!
-       ci/build && travis_wait 60 ci/test
-    else
-       ci/build
+       travis_wait 60 ci/test
     fi
