--- a/debian.conf
+++ b/debian.conf
@@ -1,10 +1,10 @@
 #!/bin/bash
 
 # ---------------------------------------------------------------------------
-CONFOPT=""
 MAKE_DIST="cmake -DCMAKE_INSTALL_PREFIX=/usr . && make dist"
+NOT_TARGET_DISTRIBUTIONS="lucid precise trusty"   # <<-- Distrubutions which are *not* supported!
 MAINTAINER="Thomas Dreibholz <dreibh@simula.no>"
 DEBIAN_LAST_ENTRY=""
 UBUNTU_LAST_ENTRY=""
-SKIP_PACKAGE_SIGNING=1   # <<-- Must be set to 0 (=off) for PPA upload!
+SKIP_PACKAGE_SIGNING=0   # <<-- Must be set to 0 (=off) for PPA upload!
 # ---------------------------------------------------------------------------
