--- a/debian/control
+++ b/debian/control
@@ -21,7 +21,8 @@ Vcs-Browser: https://github.com/simula/melodic-nornet/tags
 Package: melodic-management
 Architecture: all
 Depends: fail2ban,
-         nornet-management,gdisk,
+         gdisk,
+         nornet-management,
          ${misc:Depends},
          ${shlibs:Depends}
 Recommends: grub2-common,
