--- a/src/images/preseed.cfg
+++ b/src/images/preseed.cfg
@@ -134,7 +134,7 @@ d-i apt-setup/restricted                            boolean false
 d-i apt-setup/local0/repository                     string http://ppa.launchpad.net/dreibh/ppa/ubuntu xenial main
 d-i apt-setup/local0/comment                        string Thomas Dreibholz's PPA
 d-i apt-setup/local0/source                         boolean true
-d-i apt-setup/local0/key                            string http://keyserver.ubuntu.com:11371/pks/lookup?op=get&search=0x8A8EAF3E2F2E3BB5C75F48C1CCEB82DF916C56E0
+d-i apt-setup/local0/key                            string https://keyserver.ubuntu.com/pks/lookup?op=get&search=0x8A8EAF3E2F2E3BB5C75F48C1CCEB82DF916C56E0
 
 # Package settings:
 tasksel tasksel/first                               multiselect ubuntu-server
@@ -158,7 +158,7 @@ d-i pkgsel/include                                  string bash-completion opens
 # * Clean up
 d-i preseed/late_command                            string \
  echo "====== NorNet/MELODIC Post-Install ======" ; \
- in-target /usr/bin/apt-get-add-repository -s -y ppa:dreibh/ppa \
+ in-target /usr/bin/apt-add-repository -s -y ppa:dreibh/ppa ; \
  in-target /usr/bin/apt-get update ; \
  in-target /usr/bin/apt-get install -y melodic-server melodic-management nornet-server nornet-management ; \
  in-target /bin/bash -c -- '/bin/echo "# Network configuration written by preseed late_command" >/etc/network/interfaces' ; \
