Added autoupdate package.

--- a/src/images/preseed.cfg
+++ b/src/images/preseed.cfg
@@ -160,7 +160,7 @@ d-i preseed/late_command                            string \
  echo "====== NorNet/MELODIC Post-Install ======" ; \
  in-target /usr/bin/apt-add-repository -s -y ppa:dreibh/ppa ; \
  in-target /usr/bin/apt-get update ; \
- in-target /usr/bin/apt-get install -y melodic-server melodic-management nornet-server nornet-management ; \
+ in-target /usr/bin/apt-get install -y melodic-server melodic-management nornet-server nornet-management nornet-autoupdate ; \
  in-target /bin/bash -c -- '/bin/echo "# Network configuration written by preseed late_command" >/etc/network/interfaces' ; \
  in-target /bin/bash -c -- '/bin/echo "source /etc/network/interfaces.d/*" >>/etc/network/interfaces' ; \
  in-target /bin/bash -c -- '/bin/echo "" >>/etc/network/interfaces' ; \
